--- a/Grades.Tests/Grades.Tests.csproj
+++ b/Grades.Tests/Grades.Tests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GradeBookTests.cs" />
+    <Compile Include="TypeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
